--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <main>
-        <div class="palitos primeiroPalito">
+        <div class="torres primeiraTorre">
                 <div class="discos disco1">Disco 1</div>
                 <div class="discos disco2">Disco 2</div>
                 <div class="discos disco3">Disco 3</div>
                 <div class="discos disco4">Disco 4</div>
         </div>
 
-        <div class="palitos segundoPalito">
+        <div class="torres segundaTorre">
         </div>
 
-        <div class="palitos terceiroPalito">
+        <div class="torres terceiraTorre">
         </div>
     </main>
     <script src="script.js"></script>
