--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torre de Hanoi</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
-        <div class="torres primeiraTorre">
-                <div class="discos disco1">Disco 1</div>
-                <div class="discos disco2">Disco 2</div>
-                <div class="discos disco3">Disco 3</div>
-                <div class="discos disco4">Disco 4</div>
-        </div>
+        <h1>Torre de Hanoi</h1>
+        <section class="hanoi">
+            <div class="torres primeiraTorre">
+                    <div class="discos disco1"></div> <!-- disco1 maior -->
+                    <div class="discos disco2"></div>
+                    <div class="discos disco3"></div>
+                    <div class="discos disco4"></div> <!-- disco4 menor -->
+                    <!-- <div class="hidden"></div> -->
+            </div>
 
-        <div class="torres segundaTorre">
-        </div>
+            <div class="torres segundaTorre">
+                <!-- <div class="hidden"></div> -->
+            </div>
 
-        <div class="torres terceiraTorre">
-        </div>
+            <div class="torres terceiraTorre">
+                <!-- <div class="hidden"></div> -->
+            </div>
+        </section>
     </main>
+    <section class="bordaStyle"></section>
     <script src="script.js"></script>
 </body>
 </html>
