--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
     <main>
         <h1>Torre de Hanoi</h1>
         <section class="hanoi">
+            <div class="palito">
             <div class="torres primeiraTorre">
                     <div class="discos disco1"></div> <!-- disco1 maior -->
                     <div class="discos disco2"></div>
                     <div class="discos disco3"></div>
                     <div class="discos disco4"></div> <!-- disco4 menor -->
-                    <!-- <div class="hidden"></div> -->
             </div>
+        </div>
 
+        <div class="palito">
             <div class="torres segundaTorre">
-                <!-- <div class="hidden"></div> -->
             </div>
-
+        </div>
+        <div class="palito">
             <div class="torres terceiraTorre">
-                <!-- <div class="hidden"></div> -->
             </div>
+        </div>
         </section>
     </main>
     <section class="bordaStyle"></section>
