--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </section>
     </main>
     <section class="bordaStyle"></section>
+    <p class="contadorMovimento">0</p>
     <script src="script.js"></script>
 </body>
 </html>
